chat/chat-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "chat-service-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: chat-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: "chat-service"
          servicePort: 80
